Bug 362869 - Shortcuts not working after Configure Krita
Summary: Shortcuts not working after Configure Krita
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Tools (other bugs)
Version First Reported In: 3.0 Beta
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
: 363506 (view as bug list)
Depends on:
Blocks:
 
Reported: 2016-05-09 20:30 UTC by eliotJ
Modified: 2016-12-08 11:23 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Shortcuts not working after Configure Krita.mp4 (2.57 MB, video/mp4)
2016-05-09 20:32 UTC, eliotJ
Details

Note You need to log in before you can comment on or make changes to this bug.
Description eliotJ 2016-05-09 20:30:04 UTC
I notice that custom shortcuts don’t work in specific situation... I explain it on the video attached below.

Btw. Custom shortcuts will begin work again (after this bug appeared, what I showed on the video) if you click, by mouse, on some other tools in the Toolbox or by using some default shortcut to some tools from Toolbox (broken are custom shortcuts).

Reproducible: Always
Comment 1 eliotJ 2016-05-09 20:32:07 UTC
Created attachment 98871 [details]
Shortcuts not working after Configure Krita.mp4
Comment 2 Halla Rempt 2016-05-14 11:24:17 UTC
Hm, firefox tells me that the video is corrupt.
Comment 3 eliotJ 2016-05-15 22:26:04 UTC
Boud: Corrupt ???

I have downloaded it also in Firefox v46.0.1 (on Win 7 64 bit) and working ok for me...
Comment 4 Camille Bissuel 2016-05-24 16:38:49 UTC
Sorry, the video is corrupted for me too, also with Firefox…
Comment 5 wolthera 2016-05-25 13:44:35 UTC
*** Bug 363506 has been marked as a duplicate of this bug. ***
Comment 6 eliotJ 2016-05-26 11:18:32 UTC
@Boudewijn Rempt and Camille Bissuel
Can you simply download this video file and play, for example, in VLC ? Wolthera have tried this way and it worked ok.
Comment 7 Camille Bissuel 2016-06-07 07:23:50 UTC
By downloading the file, and opening it with Totem player, I was able to see it (but it's crashing VLC).… The video itself is nicely done by the way !

I tried to reproduce under Antergos Linux with Krita 3 , but everything run as expected for me, and I can't reproduce your bug…
Comment 8 Dmitry Kazakov 2016-12-08 10:48:38 UTC
Git commit 985d3cc1e1b23bc201dfe1f047e6b538e61595e7 by Dmitry Kazakov.
Committed on 08/12/2016 at 10:42.
Pushed by dkazakov into branch 'krita/3.1'.

Fix undoing shortcut changes when pressing Cancel button

M  +3    -2    libs/ui/dialogs/kis_dlg_preferences.cc
M  +1    -1    libs/ui/dialogs/kis_dlg_preferences.h
M  +5    -0    libs/widgetutils/xmlgui/KisShortcutsDialog.cpp
M  +2    -4    libs/widgetutils/xmlgui/KisShortcutsDialog.h

https://commits.kde.org/krita/985d3cc1e1b23bc201dfe1f047e6b538e61595e7
Comment 9 Dmitry Kazakov 2016-12-08 11:23:06 UTC
Git commit bd6c098fb3ef9f309dce453bd7ea434d317c8306 by Dmitry Kazakov.
Committed on 08/12/2016 at 11:01.
Pushed by dkazakov into branch 'rempt/impex-refactoring'.

Fix undoing shortcut changes when pressing Cancel button

M  +3    -2    libs/ui/dialogs/kis_dlg_preferences.cc
M  +1    -1    libs/ui/dialogs/kis_dlg_preferences.h
M  +5    -0    libs/widgetutils/xmlgui/KisShortcutsDialog.cpp
M  +2    -4    libs/widgetutils/xmlgui/KisShortcutsDialog.h

https://commits.kde.org/krita/bd6c098fb3ef9f309dce453bd7ea434d317c8306