Fix undoing shortcut changes when pressing Cancel button

BUG:362869